--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <tr>
             <td>
               <h3>Close the Gap</h3>
-              <p style="margin-bottom:0; font-size: 0.9rem; font-style: italic;">Team Capability Building</p>
+              <p class="service-subtitle-inline">Team Capability Building</p>
             </td>
             <td>
               For companies whose teams are capable but need clear direction.
@@ -104,7 +104,7 @@
           <tr>
             <td>
               <h3>Fill the Gap</h3>
-              <p style="margin-bottom:0; font-size: 0.9rem; font-style: italic;">Complementing Your Existing Tech Leader</p>
+              <p class="service-subtitle-inline">Complementing Your Existing Tech Leader</p>
             </td>
             <td>
               Organisations with a strong leader who needs support in specific areas (e.g., security, architecture, governance).
@@ -124,7 +124,7 @@
           <tr>
             <td>
               <h3>Mind the Gap</h3>
-              <p style="margin-bottom:0; font-size: 0.9rem; font-style: italic;">Rapid Validation</p>
+              <p class="service-subtitle-inline">Rapid Validation</p>
             </td>
             <td>
               When you need quick, surgical expertise to validate a critical security or architecture decision, or unblock a stalled high-priority initiative.
