--- a/index.html
+++ b/index.html
@@ -29,19 +29,7 @@
   <meta name="language" content="English">
   <meta name="referrer" content="strict-origin-when-cross-origin">
 
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "ProfessionalService",
-    "name": "BNR Partners",
-    "url": "https://bnr.partners/",
-    "logo": "https://bnr.partners/img/bnr-1.png",
-    "description": "BNR Partners helps companies close the gap in strategic leadership and fill capability gaps. Expert security compliance and technical advisory services.",
-    "sameAs": [
-      "https://github.com/bnr-partners"
-    ]
-  }
-  </script>
+  <!-- JSON-LD structured data removed to avoid inline scripts conflicting with strict CSP under Cloudflare rewriting -->
   
   <link rel="stylesheet" href="css/main.css">
   
