--- a/portal/index.html
+++ b/portal/index.html
@@ -22,20 +22,7 @@
   <meta name="twitter:description" content="Secure client portal for BNR Partners.">
   <meta name="twitter:image" content="https://bnr.partners/img/bnr-2.png">
 
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "WebPage",
-    "name": "BNR Partners Client Portal",
-    "url": "https://bnr.partners/portal/",
-    "description": "Secure client portal for BNR Partners.",
-    "publisher": {
-      "@type": "Organization",
-      "name": "BNR Partners",
-      "logo": "https://bnr.partners/img/bnr-2.png"
-    }
-  }
-  </script>
+  <!-- JSON-LD structured data removed to avoid inline scripts conflicting with strict CSP under Cloudflare rewriting -->
   <link rel="stylesheet" href="../css/portal.css">
 </head>
 <body>
