--- a/stack/index.html
+++ b/stack/index.html
@@ -25,20 +25,7 @@
   <meta name="language" content="English">
   <meta name="referrer" content="strict-origin-when-cross-origin">
 
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "CollectionPage",
-    "name": "BNR Partners Stack",
-    "url": "https://bnr.partners/stack/",
-    "description": "The open source security and infrastructure tools that power BNR Partners' services.",
-    "publisher": {
-      "@type": "Organization",
-      "name": "BNR Partners",
-      "logo": "https://bnr.partners/img/bnr-1.png"
-    }
-  }
-  </script>
+  <!-- JSON-LD structured data removed to avoid inline scripts conflicting with strict CSP under Cloudflare rewriting -->
   
   <link rel="stylesheet" href="../css/stack.css">
   
