--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>BNR Partners | Bridging the Gap in Technical Leadership</title>
+  <title>BNR Partners | Your Clarity Partner in Tech</title>
   <meta name="description" content="BNR Partners helps companies close the gap in strategic leadership and fill capability gaps. Expert security compliance and technical advisory services.">
   <meta name="keywords" content="security compliance, technical advisory, CISO services, CTO services, DevSecOps, security architecture, cybersecurity consulting, risk management, cloud security, interim leadership">
   <meta name="author" content="BNR Partners">
@@ -12,7 +12,7 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://bnr.partners/">
-  <meta property="og:title" content="BNR Partners | Bridging the Gap in Technical Leadership">
+  <meta property="og:title" content="BNR Partners | Your Clarity Partner in Tech">
   <meta property="og:description" content="BNR Partners helps companies close the gap in strategic leadership and fill capability gaps. Expert security compliance and technical advisory services.">
   <meta property="og:image" content="https://bnr.partners/img/bnr-1.png">
   <meta property="og:site_name" content="BNR Partners">
@@ -20,7 +20,7 @@
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://bnr.partners/">
-  <meta name="twitter:title" content="BNR Partners | Bridging the Gap in Technical Leadership">
+  <meta name="twitter:title" content="BNR Partners | Your Clarity Partner in Tech">
   <meta name="twitter:description" content="BNR Partners helps companies close the gap in strategic leadership and fill capability gaps. Expert security compliance and technical advisory services.">
   <meta name="twitter:image" content="https://bnr.partners/img/bnr-1.png">
   
@@ -51,7 +51,7 @@
   <main>
     <header>
       <h1 class="slogan">Compliant Technology | Expert Security .</h1>
-      <p class="hero-quote">"Bridging the Gap in Technical Leadership."</p>
+      <p class="hero-quote">"Your Clarity Partner in Tech."</p>
     </header>
 
     <section class="section">
